trocando div por main

--- a/index.html
+++ b/index.html
@@ -3,5 +3,10 @@
 	</head>
 	<body>
 		<h1>Projeto do Joao Fonseca</h1>
+		<div>
+			Isso aqui é o conteúdo da página
+		</div>
+		
+		<h1>Rodapé do sistema</h1>
 	</body>
 </html>
